changed mailserver to mailtrap

--- a/Form/.env.example
+++ b/Form/.env.example
@@ -27,10 +27,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailgun.org
-MAIL_PORT=587
-MAIL_USERNAME=postmaster@sandbox6dbeaa55d2114fc7823b4bc6dcf24535.mailgun.org
-MAIL_PASSWORD=bdac18901abacf806e30ac748e73c8dd-71b35d7e-631993b1
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=03b714c9908d1c
+MAIL_PASSWORD=92a7104f3e70b4
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
